--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
-<h1 class="title">test</h1>
+<div class="container">
+  <div class="columns is-centered">
+    <div class="box column is-one-third">
+      <h1 class="title has-text-centered has-text-link">Typing Game!</h1>
+      <p class="has-text-centered">
+        <span [class]="compare(letter,enteredText[i])"
+          *ngFor="let letter of sentence.split(''); let i=index;">{{letter}}</span>
+      </p>
+      <div class="field">
+        <input class="input" type="text" name="random" id="random" (input)="handlerInput($event.target.value)" />
+      </div>
+      <div *ngIf="solved" class="box has-text-centered">
+        <h1 class="title has-text-centered has-text-success">Success!</h1>
+      </div>
+    </div>
+  </div>
+</div>
