--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,3 +9,21 @@
   color: red;
   font-weight: bold;
 }
+.clock-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.round-clock {
+  box-sizing: border-box;
+  width: 50px;
+  height: 50px;
+  border: 3px solid rgb(25, 143, 107);
+  border-radius: 50%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
