--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,10 +14,10 @@
           [disabled]="isDisabled" />
       </div>
       <button (click)="handlerStart()" class="button is-dark is-medium is-fullwidth" *ngIf="isStoped">Start</button>
-      <div *ngIf="solved" class="box has-text-centered">
+      <div *ngIf="solved" class="box has-text-centered has-background-success-light">
         <h1 class="title has-text-centered has-text-success">Success!</h1>
       </div>
-      <div *ngIf="fail()" class="box has-text-centered">
+      <div *ngIf="fail()" class="box has-text-centered has-background-danger-light">
         <h1 class="title has-text-centered has-text-danger">Fail!</h1>
       </div>
     </div>
